test/e2e/testdata/authorization-http-header-and-method.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-authorization-only-user-id-header
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /protected-only-user-id-header
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-authorization-multiple-headers-and-methods
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /protected-multiple-headers-and-methods
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-only-user-id-header
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-authorization-only-user-id-header
  authorization:
    defaultAction: Deny
    rules:
    - name: "allow-user-headers"
      action: Allow
      principal:
        headers:
        - name: x-user-id
          values:
          - john
          - alice
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authorization-multiple-headers-and-methods
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-authorization-multiple-headers-and-methods
  authorization:
    defaultAction: Deny
    rules:
    - name: "allow-user-headers"
      action: Allow
      operation:
        methods:
        - GET
      principal:
        headers:
        - name: x-user-id
          values:
          - john
        - name: x-location-id
          values:
          - chengdu
          - milpitas
